--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -15,21 +15,21 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 *{
   box-sizing: border-box;
 }
 
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 /* body {
   margin: 0;
@@ -53,7 +53,7 @@ a:hover {
   transition: border-color 0.25s;
 } */
 
-button:focus,
+/* button:focus,
 button:focus-visible {
   outline: 8px auto -webkit-focus-ring-color;
 }
@@ -65,7 +65,7 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   text-align: center;
-}
+} */
 
 /* @media (prefers-color-scheme: light) {
   :root {
@@ -79,6 +79,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
 
 .navbar {
   background-color: #333; /* Color de fondo del navbar */
