--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 
 .navbar {
   background-color: #333; /* Color de fondo del navbar */
